--- a/src/App.css
+++ b/src/App.css
@@ -451,9 +451,9 @@ summary:focus {
   margin-top: 10px;
 }
 
-.favorites li:last-of-type {
+/* .favorites li:last-of-type {
   display: none;
-}
+} */
 
 .buttonFlex {
   display: flex;
@@ -527,9 +527,9 @@ a:focus {
   color: white;
 }
 
-@media (max-width: 980px) {
-  
 
+/* MEDIA QUERY */
+@media (max-width: 980px) {
   .combinedSchools {
     display: grid;
     grid-template-columns: 1fr;
@@ -627,4 +627,53 @@ a:focus {
     flex-direction: column;
     justify-items: center;
   }
+}
+
+
+
+
+/* Login styling */
+.loginSection{
+  background-color: #073330bb;
+  /* background-image: url("../src/assets/header.jpg");
+  background-size: cover; */
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+
+}
+.loginForm{
+  background-color: rgba(177,188,43, 0.9);
+  padding: 40px;
+  height: auto;
+  width: 40%;
+   
+}
+
+.loginForm  label{
+    font-size: 2rem;
+}
+.loginForm input{
+    padding: 5px 0;
+    margin: 5px 0;
+}
+
+.loginForm input:hover,
+.loginForm input:focus
+{
+   border: 2px solid #416bff ;
+}
+
+.loginButton{
+  padding: 5px 0;
+  margin: 10px 0;
+}
+
+.icons{
+  margin: 0 auto;
+  font-size: 100px;
+  margin-bottom: 40px;
+  /* color: ; */
 }
